# Anna_el

./: .gitignore  TODO.txt  count_books.py  loggers.py  main.ipynb  main.py  pyproject.toml  see_books.py  torrents.py  utils.py
